[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fastaws"
version = "0.0.10"
description = "A fast, simple, async Python library for some AWS services (S3, SES, SQS)"
readme = "README.md"
requires-python = ">=3.10.4"
license = { text = 'MIT' }
authors = [{ name = "Wayde Gilliam", email = "waydegilliam@gmail.com" }]
keywords = ["python", "aws", "asyncio"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Framework :: AsyncIO",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Internet",
]
dependencies = [
  "aiofiles==22.1.0",
  "httpx==0.23.1",
  "structlog==22.3.0",
  "beautifulsoup4==4.11.2",
  "lxml==4.9.2",
]

[project.urls]
Homepage = "https://github.com/waydegg/fastaws"
Source = "https://github.com/waydegg/fastaws"
